--- a/client/src/app/shared/footer/footer.component.html
+++ b/client/src/app/shared/footer/footer.component.html
@@ -1,3 +1,11 @@
-<footer class="app-footer">
-  <p>Developed by Sagi Akshikar</p>
-</footer>
+<body>
+  <header>...</header>
+
+  <main>
+    <!-- כל התוכן כאן -->
+  </main>
+
+  <footer class="app-footer">
+    <p>Developed by Sagi Akshikar</p>
+  </footer>
+</body>
