--- a/client/src/app/shared/header/header.component.css
+++ b/client/src/app/shared/header/header.component.css
@@ -77,19 +77,47 @@
   background-color: #2b6cb0;
 }
 
+
 .menu-button {
   background-color: transparent;
-  color: #333;
-  font-weight: 600;
-  font-size: 1rem;
+  color: #222;
+  font-weight: 700;
+  font-size: 1.05rem;
   border: none;
   cursor: pointer;
-  padding: 0.4rem 1rem;
-  border-bottom: 2px solid transparent;
-  transition: border-bottom 0.2s ease, color 0.2s ease;
+  padding: 0.4rem 1.1rem;
+  border-bottom: 3px solid transparent;
+  transition: border-bottom 0.25s ease, color 0.25s ease;
 }
 
+
+
+.menu-admin-button {
+  background-color: transparent;
+  color: #922da1;
+  font-weight: 700;
+  font-size: 1.05rem;
+  border: none;
+  cursor: pointer;
+  padding: 0.4rem 1.1rem;
+  border-bottom: 3px solid transparent;
+  transition: border-bottom 0.25s ease, color 0.25s ease;
+}
+
+/* 🟦 מעבר */
 .menu-button:hover {
-  border-bottom: 2px solid #3182ce;
-  color: #3182ce;
+  color: #1d4ed8;
+  border-bottom: 3px solid #1d4ed8;
+}
+
+.menu-admin-button:hover {
+  color: #c026d3;
+  border-bottom: 3px solid #c026d3;
+}
+
+/* ✅ הדגשה של הכפתור שנמצא בדף הנוכחי */
+.menu-button.active,
+.menu-admin-button.active {
+  color: #111;
+  border-bottom: 3px solid #111;
 }
