--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -1,7 +1,8 @@
 <nav class="header-container">
   <div class="menu-center">
-    <button class="menu-button" routerLink="/products">Products</button>
-    <button *ngIf="isAdmin" class="menu-button" routerLink="/admin-page">Admin Page</button>
+    <button class="menu-button" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</button>
+    <button class="menu-button" routerLink="/products" routerLinkActive="active">Products</button>
+    <button *ngIf="isAdmin" class="menu-admin-button" routerLink="/admin-page" routerLinkActive="active">Admin Page</button>
   </div>
 
   <div class="menu-right">
@@ -12,8 +13,8 @@
 
     <ng-template #guest>
       <span class="welcome-text">Hello, Guest</span>
-      <button class="login-button" routerLink="/login">Login</button>
-      <button class="register-button" routerLink="/register">Register</button>
+      <button class="login-button" routerLink="/login" routerLinkActive="active">Login</button>
+      <button class="register-button" routerLink="/register" routerLinkActive="active">Register</button>
     </ng-template>
   </div>
 </nav>
