--- a/client/src/app/components/product-card/product-card.component.html
+++ b/client/src/app/components/product-card/product-card.component.html
@@ -1,8 +1,22 @@
-<div class="product-card">
+<div class="product-card" (click)="goToDetails($event)">
+  <img [src]="imageUrl" alt="Product Image" class="product-image" />
   <h3>{{ name }}</h3>
   <p class="description">{{ description }}</p>
   <p class="price">Price: ${{ price }}</p>
   <p class="stock">In stock: {{ stock }}</p>
   <p class="id">Id: {{ id }}</p>
-  <button *ngIf="isAdmin" class="small-button" (click)="onSubmit()">delete</button>
+
+  <button
+    *ngIf="isAdmin"
+    class="delete-button"
+    (click)="onSubmit($event)"
+    title="delete"
+  >
+    <lord-icon
+      src="../../assets/system-regular-39-trash-hover-trash-empty.json"
+      trigger="hover"
+      style="width:28px;height:28px"
+    >
+    </lord-icon>
+  </button>
 </div>
