--- a/client/src/app/pages/products/products.component.html
+++ b/client/src/app/pages/products/products.component.html
@@ -6,6 +6,7 @@
     [price]="product.price"
     [stock]="product.stock"
     [id]="product.id"
+    [imageUrl]="product.imageUrl"
     (deleted)="removeProduct($event)">
   </app-product-card>
 </div>
