--- a/client/src/app/pages/add-product/add-product.component.html
+++ b/client/src/app/pages/add-product/add-product.component.html
@@ -17,6 +17,9 @@
     <label for="stock">Stock</label>
     <input type="number" id="stock" [(ngModel)]="product.stock" name="stock" required />
 
+    <label for="imageUrl">Image URL</label>
+    <input type="text" id="imageUrl" [(ngModel)]="product.imageUrl" name="imageUrl" />
+
     <button type="submit" [disabled]="form.invalid">Save</button>
   </form>
 </div>
