--- a/client/src/app/shared/footer/footer.component.html
+++ b/client/src/app/shared/footer/footer.component.html
@@ -1,10 +1,7 @@
 <body>
-  <header>...</header>
-
+  <header>.</header>
   <main>
-    <!-- כל התוכן כאן -->
   </main>
-
   <footer class="app-footer">
     <p>Developed by Sagi Akshikar</p>
   </footer>
