--- a/client/src/app/pages/admin-page/admin-page.component.html
+++ b/client/src/app/pages/admin-page/admin-page.component.html
@@ -5,5 +5,6 @@
   <div class="admin-actions">
     <button routerLink="/add-product" class="admin-button">Add Product</button>
     <button routerLink="/status-users" class="admin-button">Status Users</button>
+    <button routerLink="/online-users" class="admin-button">Online Users</button>
   </div>
 </div>
