--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
   <div class="home-content">
     <div class="text-section">
       <p>Hello and welcome to our bookstore.<br />
-        This is not just a store — it’s a journey through reading, a space for thought, work, and critique.</p>
+        This is not just a store — its a journey through reading, a space for thought, work, and critique.</p>
 
       <p>The store is designed for those who are passionate about politics, current affairs, history,
         dystopian literature, and other non-fiction works.</p>
@@ -18,7 +18,7 @@
       <p>Our goal is to make this site accessible to a wide audience who shares our love for books.</p>
 
       <p>Every book featured on this site is one I, Sagi Akshikar, have read and found worth sharing.
-        The site links to online purchase options <strong>e-vrit.co.il</strong>, a well-known Israeli platform for buying books.</p>
+        The site links to picture from <strong>e-vrit.co.il</strong>, a well-known Israeli platforn for buying books.</p>
 
       <p class="home-signature">Happy reading!</p>
     </div>
