--- a/client/src/app/components/product-card/product-card.component.css
+++ b/client/src/app/components/product-card/product-card.component.css
@@ -35,10 +35,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 4; /* מספר שורות לפני חיתוך */
+  -webkit-line-clamp: 4; 
   -webkit-box-orient: vertical;
   max-height: 6.5em;
-  word-break: break-word; /* למניעת גלישת טקסט יוצאת דופן */
+  word-break: break-word; 
 }
 
 .product-card .price {
@@ -53,7 +53,7 @@
 .small-button {
   padding: 4px 10px;
   font-size: 12px;
-  background-color: #ffc107; /* צבע צהוב */
+  background-color: #ffc107; 
   color: #000;
   border: none;
   border-radius: 4px;
