--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-  <h2>התחברות</h2>
+  <h2>Login</h2>
   <form (ngSubmit)="onSubmit()" #form="ngForm">
     <label for="userName">user name</label>
     <input
