--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -19,7 +19,7 @@
         admin?
       </label>
 
-      <button type="submit" [disabled]="form.invalid">הרשמה</button>
+      <button type="submit" [disabled]="form.invalid">Register</button>
     </form>
   </div>
 </div>
