--- a/client/src/app/shared/header/header.component.css
+++ b/client/src/app/shared/header/header.component.css
@@ -94,7 +94,7 @@
 
 .menu-admin-button {
   background-color: transparent;
-  color: #cc85d7;
+  color: #c21bdc;
   font-weight: 700;
   font-size: 1.05rem;
   border: none;
@@ -112,14 +112,18 @@
 
 .menu-admin-button:hover {
   color: #c026d3;
-  border-bottom: 3px solid #c026d3;
+  border: 2px solid #c026d3;
+  border-radius: 6px; 
+  
 }
 
 
 .menu-button.active,
 .menu-admin-button.active {
-  color: #111;
-  border-bottom: 3px solid #111;
+  color: #c13232;
+  border-bottom: 3px solid #cd2626;
+  box-shadow: inset 0 0px 0px rgba(255, 0, 213, 0.3);
+  border-radius: 8px;
 }
 
 
